<resources>
    <string name="app_name">Swapcard Movie Browser</string>
    <string name="title_home">Movie Browser</string>
    <string name="title_popular">Popular</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_loading">Loading…</string>
    <string name="title_retry">Retry</string>
    <string name="title_overview">Overview</string>
    <string name="title_casts">Casts</string>
    <string name="title_director">Director</string>
    <string name="title_rating">Rating</string>
    <string name="title_release">Release</string>
    <string name="title_runtime">Runtime</string>
    <string name="title_similar_movies">Similar Movies</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_family">Family</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="description_favorite">Favorite movie button</string>
    <string name="description_poster">Movie poster</string>
    <string name="description_empty_similar_movies">Movies not found</string>
    <string name="abbr_hour">h</string>
    <string name="abbr_minute">min</string>
</resources>
