<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="movieFragmentViewModel"
            type="com.swapcard.apps.moviebrowser.android.ui.viewmodel.MovieFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/ToolbarTheme"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="@dimen/app_margin_half"
            android:paddingEnd="@dimen/app_margin_half"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="@dimen/favorite_size"
                    android:layout_height="@dimen/favorite_size"
                    android:padding="@dimen/app_margin_half"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:onClick="@{() -> movieFragmentViewModel.toggleFavorite()}"
                    app:imageResource="@{movieFragmentViewModel.movie.listItemFavoriteResId()}"
                    app:tint="@color/colorAccent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/description_favorite" />

                <TextView
                    android:id="@+id/genres"
                    style="@style/Movie.Details.Content"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@{movieFragmentViewModel.movie.genres(context)}"
                    android:gravity="start|center_vertical"
                    app:layout_constraintTop_toTopOf="@id/favorite"
                    app:layout_constraintBottom_toBottomOf="@id/favorite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/favorite"/>

                <LinearLayout
                    android:id="@+id/overview_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_margin"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/genres"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/poster"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:adjustViewBounds="true"
                        app:imageUrl="@{movieFragmentViewModel.movie.movie}"
                        android:contentDescription="@string/description_poster" />

                    <TextView
                        android:id="@+id/overview"
                        style="@style/Movie.Details.Content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="60"
                        android:layout_marginStart="@dimen/app_margin_half"
                        android:text="@{movieFragmentViewModel.movie.movie.overview}"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/details_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/app_margin"
                    app:layout_constraintTop_toBottomOf="@id/overview_frame"
                    app:layout_constraintStart_toStartOf="parent"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/release_label"
                            style="@style/Movie.Details.Label"
                            android:gravity="center"
                            android:text="@string/title_release" />

                        <TextView
                            android:id="@+id/release"
                            style="@style/Movie.Details.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/app_margin_half"
                            android:gravity="center"
                            android:text="@{movieFragmentViewModel.movie.release(context)}"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/rating_label"
                            style="@style/Movie.Details.Label"
                            android:gravity="center"
                            android:text="@string/title_rating" />

                        <TextView
                            android:id="@+id/rating"
                            style="@style/Movie.Details.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/app_margin_half"
                            android:gravity="center"
                            android:text="@{movieFragmentViewModel.movie.rating()}"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/runtime_label"
                            style="@style/Movie.Details.Label"
                            android:gravity="center"
                            android:text="@string/title_runtime" />

                        <TextView
                            android:id="@+id/runtime"
                            style="@style/Movie.Details.Content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/app_margin_half"
                            android:gravity="center"
                            android:text="@{movieFragmentViewModel.movie.runtime(context)}"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/casts_label"
                    style="@style/Movie.Details.Label"
                    android:layout_marginTop="20dp"
                    android:text="@string/title_casts"
                    android:gravity="start"
                    app:layout_constraintTop_toBottomOf="@id/details_frame"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/casts"
                    style="@style/Movie.Details.Content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_margin_half"
                    android:layout_marginStart="@dimen/app_margin_half"
                    android:text="@{movieFragmentViewModel.movie.movie.casts}"
                    app:layout_constraintTop_toBottomOf="@id/casts_label"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/director_label"
                    style="@style/Movie.Details.Label"
                    android:layout_marginTop="20dp"
                    android:text="@string/title_director"
                    android:gravity="start"
                    app:layout_constraintTop_toBottomOf="@id/casts"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/director"
                    style="@style/Movie.Details.Content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_margin_half"
                    android:layout_marginStart="@dimen/app_margin_half"
                    android:text="@{movieFragmentViewModel.movie.movie.director}"
                    app:layout_constraintTop_toBottomOf="@id/director_label"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/similar_movies_label"
                    style="@style/Movie.Details.Label"
                    android:layout_marginTop="@dimen/app_margin"
                    android:text="@string/title_similar_movies"
                    android:gravity="start"
                    app:layout_constraintTop_toBottomOf="@id/director"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/similar_movies_label"
                    app:layout_constraintStart_toStartOf="parent"/>

                <include
                    android:id="@+id/load_state"
                    layout="@layout/item_load_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:loadState="@{movieFragmentViewModel.similarMoviesLoadStateViewModel}"
                    app:layout_constraintTop_toBottomOf="@id/similar_movies_label"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
